# ttb-poc

./: .env.example  .gitignore  .gitleaks.toml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  railway.toml  take-home-prompt.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: auth.py  config.py  csrf.py  limiter.py  logging_config.py  main.py  middleware.py  models.py
backend/app/routers/: admin.py  auth.py  verify.py
backend/app/services/: vision.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_auth_logs.py  0003_retention_policy.py  0004_pending_status.py  0005_allowed_emails.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_verify_routes.py  test_vision_logic.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css  validateAppData.js  validateAppData.test.js
frontend/src/components/: AdminPage.jsx  AppForm.jsx  AppForm.test.jsx  BatchPage.jsx  LoginPage.jsx  ResultCard.jsx  ResultCard.test.jsx  SinglePage.jsx  SinglePage.test.jsx
