[project]
name = "ttb-label-verification"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg2-binary>=2.9",
    "anthropic>=0.40",
    "authlib>=1.3",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.2.2",
    "pydantic-settings>=2.6",
    "email-validator>=2.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "bandit[toml]>=1.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
