[project]
name = "ttb-label-verification"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.4",
    "psycopg2-binary>=2.9.12",
    "anthropic>=0.103.0",
    "authlib>=1.7.2",
    "httpx>=0.28.1",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.29",
    "python-dotenv>=1.2.2",
    "pydantic-settings>=2.14.1",
    "email-validator>=2.3.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "bandit[toml]>=1.9.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
